# MyRepo

./: .gitignore  README.md  make(NewCode).bat  make.bat
CM/CM_build/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeTesting.sln  CMakeTesting.vcxproj  CMakeTesting.vcxproj.filters  CMakeTestingConfig.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CM/CM_build/SourcesAndHeaders/: AddContextAction.vcxproj  AddContextAction.vcxproj.filters  CheckReservedWordAction.vcxproj  CheckReservedWordAction.vcxproj.filters  (+7 more)
CM/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeTesting.sln  CMakeTesting.vcxproj  CMakeTesting.vcxproj.filters  CMakeTestingConfig.h.in  ZERO_CHECK.vcxproj  cmake_install.cmake  main.cpp
CM/src/CMakeTesting.dir/Debug/: CMakeTesting.exe.recipe  CMakeTesting.ilk
CM/src/CMakeTesting.dir/Debug/CMakeTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CM/src/SourcesAndHeaders/: Action.cpp  Action.vcxproj.filters  CMakeLists.txt  CheckReservedWordAction.h  CheckReservedWordAction.vcxproj.filters  ConcatenateDataAction.cpp  ConcatenateDataAction.h  ConcatenateKeyAction.cpp  ConcatenateKeyAction.h  DataReadyAction.h  DataReadyAction.vcxproj  DataReadyAction.vcxproj.filters  DictionaryData.cpp  DictionaryData.vcxproj  DictionaryData.vcxproj.filters  ErrorTratementAction.vcxproj  ErrorTratementAction.vcxproj.filters  JsonAnalizer.h  JsonAnalizer.vcxproj  RemoveContextAction.vcxproj  RemoveContextAction.vcxproj.filters  StayAction.cpp  StayAction.h  StayAction.vcxproj  main.cpp
CM/src/SourcesAndHeaders/Action.dir/Debug/Action.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/AddContextAction.dir/Debug/AddContextAction.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/CheckReservedWordAction.dir/Debug/CheckRes.5AC90439.tlog/: CL.write.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/ConcatenateDataAction.dir/Debug/: ConcatenateDataAction.lib.recipe
CM/src/SourcesAndHeaders/ConcatenateDataAction.dir/Debug/Concaten.5FDAABBF.tlog/: Lib-link.read.1.tlog  Lib-link.write.1.tlog
CM/src/SourcesAndHeaders/ConcatenateKeyAction.dir/Debug/Concaten.FD056F6E.tlog/: CL.command.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/DataReadyAction.dir/Debug/DataReadyAction.tlog/: CL.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/Debug/: CheckReservedWordAction.lib  ConcatenateDataAction.lib  DataReadyAction.lib  DictionaryData.lib  JsonAnalizer.lib
CM/src/SourcesAndHeaders/DictionaryData.dir/Debug/DictionaryData.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/ErrorTratementAction.dir/Debug/ErrorTra.108DE4A5.tlog/: CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog
CM/src/SourcesAndHeaders/JsonAnalizer.dir/Debug/JsonAnalizer.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog
CM/src/SourcesAndHeaders/MoveAction.dir/Debug/MoveAction.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib.command.1.tlog
CM/src/SourcesAndHeaders/RemoveContextAction.dir/Debug/RemoveCo.A8FFFC0C.tlog/: Lib-link.read.1.tlog  Lib-link.write.1.tlog
CM/src/SourcesAndHeaders/StayAction.dir/Debug/StayAction.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CM/src/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
CM/src/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
CM/src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Intership with CMake (WIP)/codes/: ErrorUnitClose1.txt  ErrorUnitClose3Comma.txt  validCode2.txt
Intership(NewCode)/: .gitignore  CMakelists.txt  make(NewCode).bat
Intership(NewCode)/TestingCodes/: ErrorDoublePoint.txt  ErrorKeyDeclaration.txt  code.json
Intership(NewCode)/includes/: Action.h  DictionaryData.h  ErrorAction.h  ErrorTratementAction.h  JsonAnalizer.cpp  StayAction.h
Intership(NewCode)/src/: CMakeNewCodeConfig.h.in  ConcatenateDataAction.cpp  DictionaryData.cpp  JsonAnalizer.cpp  main.cpp
Intership(OriginalCode)/: .gitignore  CMakeLists.txt  CMakeTestingConfig.h.in  README.md  main.cpp
Intership(OriginalCode)/codes/: ErrorMissKey.txt  ErrorReservedWord.txt  ErrorUnitClose2.txt  code.txt  validCode1.txt
Intership(OriginalCode)/includes/Action/: Action.cpp
Intership(OriginalCode)/includes/CheckReservedWordAction/: CmakeLists.txt
Intership(OriginalCode)/includes/ErrorTratementAction/: CmakeLists.txt
Intership(OriginalCode)/includes/JsonAnalizer/: JsonAnalizer.cpp  JsonAnalizer.h
Intership(OriginalCode)/includes/MoveAction/: CmakeLists.txt
Intership(OriginalCode)/includes/RemoveContextAction/: CmakeLists.txt  RemoveContextAction.cpp
Intership(OriginalCode)/includes/StayAction/: CmakeLists.txt
Intership(OriginalCode)/src/: main.cpp
NewTry/: CMakeLists.txt  CMakeTestingConfig.h.in  main.cpp
NewTry/codes/: ErrorComma.txt  ErrorOpenUnit.txt  validCode3.txt
NewTry/includes/Action/: Action.h
NewTry/includes/AddContextAction/: AddContextAction.h  CmakeLists.txt
NewTry/includes/CheckReservedWordAction/: CheckReservedWordAction.cpp
NewTry/includes/ConcatenateDataAction/: CmakeLists.txt  ConcatenateDataAction.h
NewTry/includes/ConcatenateKeyAction/: CmakeLists.txt
NewTry/includes/DataReadyAction/: DataReadyAction.h
NewTry/includes/ErrorTratementAction/: ErrorTratementAction.cpp
NewTry/includes/StayAction/: StayAction.h
(+219 files in other folders)
